# maximum_league

./: .gitignore  README.md  drizzle.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
drizzle/: schema.ts
drizzle/migrations/: 0000_mvp_init.sql  0001_add_matchups.sql
drizzle/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
scripts/: db.cjs  gen-icons.cjs
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/lcu/: client.rs  credentials.rs  mod.rs
src/components/: LiveDraftDashboard.css  LiveDraftDashboard.tsx
src/hooks/: useChampionPool.ts  useLcuSync.ts
src/types/: lcu.ts
